etc/kube/prover.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prover
  namespace: ${ZKSYNC_ENV}
  labels:
    app: prover
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: prover
  template:
    metadata:
      labels:
        app: prover
    spec:
      containers:
      - name: prover
        image: matterlabs/prover:${IMAGE_TAG}
        imagePullPolicy: Always
        resources: ${PROVER_MIN_RESOURCES}
      terminationGracePeriodSeconds: 20
