etc/kube/franklin.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: gluk64/franklin:server
          imagePullPolicy: Always
          ports: 
            - containerPort: 3000
      nodeSelector:
        doks.digitalocean.com/node-pool: k8s-ams3-81r8to7yx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prover
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prover
  template:
    metadata:
      labels:
        app: prover
    spec:
      containers:
        - name: prover
          image: gluk64/franklin:prover
          imagePullPolicy: Always
      nodeSelector:
        doks.digitalocean.com/node-pool: k8s-ams3-1
