etc/kube/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: ${ZKSYNC_ENV}
  labels:
    app: nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: ${ZKSYNC_ENV}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: matterlabs/nginx:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
