etc/kube/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: ${ZKSYNC_ENV}
  annotations:
    qoqo.dev/service-mode: active-standby
  labels:
    app: server
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: server-rest
    - port: 3030
      targetPort: 3030
      protocol: TCP
      name: server-jsrpc
    - port: 3031
      targetPort: 3031
      protocol: TCP
      name: server-jsrpc-ws
    - port: 8088
      targetPort: 8088
      protocol: TCP
      name: prover-server-port
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: ${ZKSYNC_ENV}
spec:
  strategy:
    type: Recreate
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: matterlabs/server:${IMAGE_TAG}
          imagePullPolicy: Always
          resources: ${SERVER_CONTAINER_RESOURCES}
          ports:
            - containerPort: 3000
            - containerPort: 3030
            - containerPort: 3031
            - containerPort: 8088
          volumeMounts:
            - name: podinfo
              mountPath: /etc/podinfo
      volumes:
        - name: podinfo
          downwardAPI:
            items:
              - path: "labels"
                fieldRef:
                  fieldPath: metadata.labels
              - path: "annotations"
                fieldRef:
                  fieldPath: metadata.annotations
